--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "npm install --only=dev && tsc",
+    "start" : "node dist/index.js",
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js"
   },
