removed timing on requests

--- a/testing.yaml
+++ b/testing.yaml
@@ -1,5 +1,5 @@
 config:
-  target: "http://127.0.0.1:5001"
+  target: "https://crazytime.spike-realtime-api.eu"
   socketio:
     transports: ["websocket"]
   engines:
