added spike slot to cors

--- a/testing-local.yaml
+++ b/testing-local.yaml
@@ -1,12 +1,13 @@
 config:
-  target: "https://crazytime.spike-realtime-api.eu"
+  target: "http://localhost:5000"
   socketio:
     transports: ["websocket"]
   engines:
    socketio-v3: {}
   phases:
     - duration: 30 # Run scenario for 10 seconds
-      arrivalCount: 900 # Create 20 virtual users per scenario
+      arrivalCount: 2000 # Create 20 virtual users per scenario
+      arrivalrate : 20
 scenarios:
   - engine: socketio-v3
     flow:
