--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start" : "node dist/index.js",
+    "start": "node dist/index.js",
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js"
   },
@@ -18,8 +18,9 @@
     "date-fns-tz": "^1.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "5.10.18",
+    "mongoose": "^6.7.2",
     "node-cron": "^3.0.0",
+    "node-os-utils": "^1.3.7",
     "nodemon": "^2.0.7",
     "socket.io": "^4.0.1",
     "typescript": "^4.2.4"
